@@ -92,3 +92,8 @@ body.admin-menu { margin-top: 20px !important; }
 
 /* #210615: Mozilla on Mac fix */
 html.js fieldset.collapsible div.fieldset-wrapper { overflow: visible; }
+
+@media print {
+  #admin-menu { display: none; }
+  body.admin-menu { margin-top: 0 !important; }
+}
