@@ -69,7 +69,7 @@ function admin_menu_menu($may_cache) {
   }
   elseif (!$may_cache && user_access('access administration menu')) {
     $path = drupal_get_path('module', 'admin_menu');
-    drupal_add_css($path .'/admin_menu.css', 'module', 'screen', FALSE);
+    drupal_add_css($path .'/admin_menu.css', 'module', 'all', FALSE);
     drupal_add_js($path .'/admin_menu.js');
     drupal_add_js(array('admin_menu_margin_top' => variable_get('admin_menu_margin_top', 1)), 'setting');
   }
