@@ -6,6 +6,9 @@ Admin Menu x.x-x.x, xxxx-xx-xx
 
 Admin Menu 5.x-2.x, xxxx-xx-xx
 ------------------------------
+#239022 by mikl: Added Danish translation.
+#234444 by smk-ka: Fixed favicon issue for the "admin" menu.
+#198240 by sun: Fixed admin_menu displayed in print output.
 
 
 Admin Menu 5.x-2.4, 2008-02-24
